fix : content spacing

--- a/wishlist-page/wishlist.css
+++ b/wishlist-page/wishlist.css
@@ -3,7 +3,7 @@
 }
 
 .section-container {
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .title {
